2005-10-23  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Delete .taskExiting.
	* Task.java: Add .notifyTerminating.
	* TestExiting.java: Use TaskObserver .Terminating.
	* TaskState.java: Replace Proc .taskExiting, with Task
	.notifyTerminating.
	
	* Proc.java: Delete .taskDestroyed.
	* TaskState.java: Replace Proc .taskDestroyed, with Task
	.notifyTerminated.
	* Task.java: Add .notifyTerminated.
	* TestTerminated.java, TestModify.java, TestExiting.java: Use
	TaskObserver .Terminated.

	* TaskState.java: When fork, call Task .notifyForked.
	* Task.java: Add .notifyForked.
	* TestTaskForkedObserver.java: New.
	* TestFork.java: Delete.

	* TestLib.java: Add .StopEventLoopWhenChildProcRemoved, replaces
	.addStopEventLoopOnChildProcRemovedObserver.
	* TestTerminated.java: Update.
	* TestTaskClonedObserver.java: Update.
	* TestRun.java: Update.
	* TestProcGet.java: Update.
	* TestFork.java: Update.
	* TestExiting.java: Update.
	* TestExec.java: Update.
	
	* TestTaskClonedObserver.java: Use TestLib's .AddTaskObserver, and
	TaskObserverBase.
	* TestLib.java: Add method .isDescendantOfMine.  Add classes
	AddTaskObserver, and TaskObserverBase.
	(setUp): Register any descendant process.

	* TaskState.java: Handle .processPerformTerminating in
	startRunning, and zombied states.  Do not pass the terminating
	exit status to Task .sendContinue.
	* LinuxTask.java: Always enable exit tracing.
	* Task.java: Delete .traceExit.
	
	* Task.java: Merge .performExited into .performTerminated.
	Replace .performExiting into .performTerminating.
	* LinuxHost.java: Update.
	* TaskState.java: Replace .processPerformExiting with
	.processPerformTerminating.  Merge .processPerformExited into
	.processPerformTerminated.

	* TestLib.java, LinuxHost.java: Update Wait .Observer objects so
	that .eventExit has additional signal, and coreDumped parameters,
	and .exited is merged into .terminated.

	* TaskObserver.java: Replace .Exiting with .Terminating; Merge
	.Exited into .Terminated.
